--- a/cultraview/NewSettings/app/src/main/res/values-zh-rTW/strings.xml
+++ b/cultraview/NewSettings/app/src/main/res/values-zh-rTW/strings.xml
@@ -21,6 +21,17 @@
     <string name="item_hotspot">热点</string>
     <string name="item_bluetooth">蓝牙</string>
 
+    <!-- Bluetooth settings.  Message when a device is disconnected -->
+    <string name="bluetooth_disconnected">已断开</string>
+    <!-- Bluetooth settings.  Message when disconnecting from a device -->
+    <string name="bluetooth_disconnecting">断开连接</string>
+    <!-- Bluetooth settings.  Message when connecting to a device -->
+    <string name="bluetooth_connecting">连接中</string>
+    <!-- Bluetooth settings.  Message when connected to a device. [CHAR LIMIT=40] -->
+    <string name="bluetooth_connected">已连接</string>
+    <!--Bluetooth settings screen, summary text under individual Bluetooth devices when pairing -->
+    <string name="bluetooth_pairing">匹配中</string>
+
     <string name="status_on">开</string>
     <string name="status_off">关</string>
 
