update for easyTouch

--- a/cultraview/easytouch/app/src/main/res/values-zh-rCN/strings.xml
+++ b/cultraview/easytouch/app/src/main/res/values-zh-rCN/strings.xml
@@ -8,5 +8,6 @@
     <string name="multitasking">多任务</string>
     <string name="setting">设置</string>
     <string name="home">主页</string>
+    <string name="metting">视频会议</string>
 
 </resources>
