--- a/cultraview/easytouch/app/src/main/res/values/strings.xml
+++ b/cultraview/easytouch/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="multitasking">app switch</string>
     <string name="setting">setting</string>
     <string name="home">home</string>
+    <string name="metting">NetMeeting</string>
 </resources>
